--- a/Analysis/extract_peptide_mods.Rmd
+++ b/Analysis/extract_peptide_mods.Rmd
@@ -96,8 +96,7 @@ PSMdata.list <- lapply(sample.list, cleanMODaData, "../ProcessedData/MODa_output
 
 # next, count all the mods
 mod_count.list <- lapply(PSMdata.list, countMods, -2, 2) # limit mod range for now, for development
-writeCSVFromList(mod_count.list, "_PSM_mod_counts.csv.gz",
-                   "./GeneratedDataFiles/PSMHits", gz = TRUE)
+writeCSVFromList(mod_count.list, "_PSM_mod_counts.csv", "./GeneratedDataFiles/PSMHits")
 ```
 
 
